chatservice can authenticate with hard coded env variables