@@ -1,234 +1,1492 @@
-ishimwe@alpha:~/projs/django/microservices/service_one/zedvye_six/chat_service$ mvn clean install
-[INFO] Scanning for projects...
-[INFO] 
-[INFO] ----------------------< com.example:chat_service >----------------------
-[INFO] Building chat_service 0.0.1-SNAPSHOT
-[INFO] --------------------------------[ jar ]---------------------------------
-[INFO] 
-[INFO] --- maven-clean-plugin:3.5.0:clean (default-clean) @ chat_service ---
-[INFO] Deleting /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/target
-[INFO] 
-[INFO] --- maven-resources-plugin:3.3.1:resources (default-resources) @ chat_service ---
-[INFO] Copying 1 resource from src/main/resources to target/classes
-[INFO] Copying 0 resource from src/main/resources to target/classes
-[INFO] 
-[INFO] --- maven-compiler-plugin:3.14.1:compile (default-compile) @ chat_service ---
-[INFO] Recompiling the module because of changed source code.
-[INFO] Compiling 20 source files with javac [debug parameters release 21] to target/classes
-[INFO] 
-[INFO] --- maven-resources-plugin:3.3.1:testResources (default-testResources) @ chat_service ---
-[INFO] skip non existing resourceDirectory /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/src/test/resources
-[INFO] 
-[INFO] --- maven-compiler-plugin:3.14.1:testCompile (default-testCompile) @ chat_service ---
-[INFO] Recompiling the module because of changed dependency.
-[INFO] Compiling 1 source file with javac [debug parameters release 21] to target/test-classes
-[INFO] 
-[INFO] --- maven-surefire-plugin:3.5.5:test (default-test) @ chat_service ---
-[INFO] Using auto detected provider org.apache.maven.surefire.junitplatform.JUnitPlatformProvider
-[INFO] 
-[INFO] -------------------------------------------------------
-[INFO]  T E S T S
-[INFO] -------------------------------------------------------
-[INFO] Running com.example.chat_service.ChatServiceApplicationTests
-12:51:49.379 [main] INFO org.springframework.test.context.support.AnnotationConfigContextLoaderUtils -- Could not detect default configuration classes for test class [com.example.chat_service.ChatServiceApplicationTests]: ChatServiceApplicationTests does not declare any static, non-private, non-final, nested classes annotated with @Configuration.
-12:51:49.562 [main] INFO org.springframework.boot.test.context.SpringBootTestContextBootstrapper -- Found @SpringBootConfiguration com.example.chat_service.ChatServiceApplication for test class com.example.chat_service.ChatServiceApplicationTests
-12:51:49.717 [main] INFO org.springframework.test.context.support.AnnotationConfigContextLoaderUtils -- Could not detect default configuration classes for test class [com.example.chat_service.ChatServiceApplicationTests]: ChatServiceApplicationTests does not declare any static, non-private, non-final, nested classes annotated with @Configuration.
-12:51:49.719 [main] INFO org.springframework.boot.test.context.SpringBootTestContextBootstrapper -- Found @SpringBootConfiguration com.example.chat_service.ChatServiceApplication for test class com.example.chat_service.ChatServiceApplicationTests
+problem (this is what i currently have (ishimwe@alpha:~/projs/django/microservices/service_one/zedvye_six/chat_service$ tree
+.
+├── HELP.md
+├── mvnw
+├── mvnw.cmd
+├── my_local_actions
+│   ├── curls
+│   │   └── tests
+│   │       └── health.md
+│   ├── DB
+│   ├── issues.md
+│   └── notes.md
+├── [object
+├── Object]
+├── pom.xml
+├── src
+│   ├── main
+│   │   ├── java
+│   │   │   └── com
+│   │   │       └── example
+│   │   │           └── chat_service
+│   │   │               ├── api
+│   │   │               │   ├── advice
+│   │   │               │   ├── chat
+│   │   │               │   │   └── ChatController.java
+│   │   │               │   └── health
+│   │   │               ├── application
+│   │   │               │   ├── members
+│   │   │               │   └── post
+│   │   │               │       ├── dtos
+│   │   │               │       ├── factory
+│   │   │               │       │   └── PostFactory.java
+│   │   │               │       ├── handlers
+│   │   │               │       └── services
+│   │   │               │           ├── impl
+│   │   │               │           │   └── PostCommandServiceImpl.java
+│   │   │               │           └── PostCommandServiceInterface.java
+│   │   │               ├── ChatServiceApplication.java
+│   │   │               ├── config
+│   │   │               │   ├── DotenvConfig.java
+│   │   │               │   └── JpaConfig.java
+│   │   │               ├── domain
+│   │   │               │   ├── members
+│   │   │               │   └── post
+│   │   │               │       ├── exceptions
+│   │   │               │       │   ├── InvalidPostContentError.java
+│   │   │               │       │   ├── InvalidPostEntityError.java
+│   │   │               │       │   ├── InvalidPostMetricsError.java
+│   │   │               │       │   ├── PostAlreadyExistsError.java
+│   │   │               │       │   ├── PostDomainError.java
+│   │   │               │       │   ├── PostNotFoundError.java
+│   │   │               │       │   ├── PostOperationNotAllowedError.java
+│   │   │               │       │   ├── PostStateTransitionError.java
+│   │   │               │       │   ├── PostUnauthorizedError.java
+│   │   │               │       │   └── PostUnauthorizedErrorWithNoId.java
+│   │   │               │       ├── PostAggregate.java
+│   │   │               │       ├── Post.java
+│   │   │               │       └── repositories
+│   │   │               │           ├── PostCommandRepository.java
+│   │   │               │           └── PostQueryRepository.java
+│   │   │               ├── external
+│   │   │               ├── infrastructure
+│   │   │               │   ├── config
+│   │   │               │   ├── external
+│   │   │               │   ├── persistence
+│   │   │               │   │   ├── members
+│   │   │               │   │   └── posts
+│   │   │               │   │       ├── jpa
+│   │   │               │   │       │   └── PostCommandJpaRepository.java
+│   │   │               │   │       ├── PostEntity.java
+│   │   │               │   │       ├── PostMapper.java
+│   │   │               │   │       └── repositories
+│   │   │               │   │           ├── PostCommandOrmRepository.java
+│   │   │               │   │           └── PostQueryOrmRepository.java
+│   │   │               │   └── security
+│   │   │               ├── security
+│   │   │               └── shared
+│   │   │                   ├── exceptions
+│   │   │                   │   └── DomainException.java
+│   │   │                   └── responses
+│   │   └── resources
+│   │       ├── application.yml
+│   │       ├── static
+│   │       └── templates
+│   └── test
+│       └── java
+│           └── com
+│               └── example
+│                   └── chat_service
+│                       └── ChatServiceApplicationTests.java
+└── target
+    ├── classes
+    │   ├── application.yml
+    │   └── com
+    │       └── example
+    │           └── chat_service
+    │               ├── api
+    │               │   └── chat
+    │               │       └── ChatController.class
+    │               ├── application
+    │               │   └── post
+    │               │       ├── factory
+    │               │       │   ├── PostFactory$Holder.class
+    │               │       │   └── PostFactory.class
+    │               │       └── services
+    │               │           ├── impl
+    │               │           │   └── PostCommandServiceImpl.class
+    │               │           └── PostCommandServiceInterface.class
+    │               ├── ChatServiceApplication.class
+    │               ├── config
+    │               │   ├── DotenvConfig.class
+    │               │   └── JpaConfig.class
+    │               ├── domain
+    │               │   └── post
+    │               │       ├── exceptions
+    │               │       │   ├── InvalidPostContentError.class
+    │               │       │   ├── InvalidPostEntityError.class
+    │               │       │   ├── InvalidPostMetricsError.class
+    │               │       │   ├── PostAlreadyExistsError.class
+    │               │       │   ├── PostDomainError.class
+    │               │       │   ├── PostNotFoundError.class
+    │               │       │   ├── PostOperationNotAllowedError.class
+    │               │       │   ├── PostStateTransitionError.class
+    │               │       │   ├── PostUnauthorizedError.class
+    │               │       │   └── PostUnauthorizedErrorWithNoId.class
+    │               │       ├── PostAggregate.class
+    │               │       ├── Post.class
+    │               │       └── repositories
+    │               │           └── PostCommandRepository.class
+    │               └── infrastructure
+    │                   └── persistence
+    │                       └── posts
+    │                           ├── jpa
+    │                           │   └── PostCommandJpaRepository.class
+    │                           ├── PostEntity.class
+    │                           ├── PostMapper.class
+    │                           └── repositories
+    │                               └── PostCommandOrmRepository.class
+    ├── generated-sources
+    │   └── annotations
+    ├── generated-test-sources
+    │   └── test-annotations
+    ├── maven-status
+    │   └── maven-compiler-plugin
+    │       ├── compile
+    │       │   └── default-compile
+    │       │       ├── createdFiles.lst
+    │       │       └── inputFiles.lst
+    │       └── testCompile
+    │           └── default-testCompile
+    │               ├── createdFiles.lst
+    │               └── inputFiles.lst
+    └── test-classes
+        └── com
+            └── example
+                └── chat_service
+                    └── ChatServiceApplicationTests.class
 
-  .   ____          _            __ _ _
- /\\ / ___'_ __ _ _(_)_ __  __ _ \ \ \ \
-( ( )\___ | '_ | '_| | '_ \/ _` | \ \ \ \
- \\/  ___)| |_)| | | | | || (_| |  ) ) ) )
-  '  |____| .__|_| |_|_| |_\__, | / / / /
- =========|_|==============|___/=/_/_/_/
+85 directories, 70 files
+ishimwe@alpha:~/projs/django/microservices/service_one/zedvye_six/chat_service$ 
+) but i want to authenticate this service from my auth_service, let me show you how i did it in my py service and go service and you give me a step by step way i can configure it in this current setup see this is python (
+(# room_service/room_service/auth/jwt_verifier.py
 
- :: Spring Boot ::                (v4.0.6)
+import jwt
+import httpx
+import time
+import logging
+from asyncio import Lock
+from django.conf import settings
+from rest_framework.exceptions import AuthenticationFailed
 
-2026-05-10T12:51:50.335+02:00  INFO 165523 --- [chat-service] [           main] c.e.c.ChatServiceApplicationTests        : Starting ChatServiceApplicationTests using Java 21.0.10 with PID 165523 (started by ishimwe in /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service)
-2026-05-10T12:51:50.341+02:00 DEBUG 165523 --- [chat-service] [           main] c.e.c.ChatServiceApplicationTests        : Running with Spring Boot v4.0.6, Spring v7.0.7
-2026-05-10T12:51:50.342+02:00  INFO 165523 --- [chat-service] [           main] c.e.c.ChatServiceApplicationTests        : No active profile set, falling back to 1 default profile: "default"
-2026-05-10T12:51:51.102+02:00  INFO 165523 --- [chat-service] [           main] .s.d.r.c.RepositoryConfigurationDelegate : Bootstrapping Spring Data JPA repositories in DEFAULT mode.
-2026-05-10T12:51:51.121+02:00  INFO 165523 --- [chat-service] [           main] .s.d.r.c.RepositoryConfigurationDelegate : Finished Spring Data repository scanning in 5 ms. Found 0 JPA repository interfaces.
-2026-05-10T12:51:52.067+02:00  INFO 165523 --- [chat-service] [           main] org.hibernate.orm.jpa                    : HHH008540: Processing PersistenceUnitInfo [name: default]
-2026-05-10T12:51:52.162+02:00  INFO 165523 --- [chat-service] [           main] org.hibernate.orm.core                   : HHH000001: Hibernate ORM core version 7.2.12.Final
-2026-05-10T12:51:52.912+02:00  INFO 165523 --- [chat-service] [           main] o.s.o.j.p.SpringPersistenceUnitInfo      : No LoadTimeWeaver setup: ignoring JPA class transformer
-2026-05-10T12:51:52.950+02:00  INFO 165523 --- [chat-service] [           main] com.zaxxer.hikari.HikariDataSource       : HikariPool-1 - Starting...
-2026-05-10T12:51:53.480+02:00  INFO 165523 --- [chat-service] [           main] com.zaxxer.hikari.pool.HikariPool        : HikariPool-1 - Added connection org.postgresql.jdbc.PgConnection@b340615
-2026-05-10T12:51:53.483+02:00  INFO 165523 --- [chat-service] [           main] com.zaxxer.hikari.HikariDataSource       : HikariPool-1 - Start completed.
-2026-05-10T12:51:53.524+02:00  WARN 165523 --- [chat-service] [           main] org.hibernate.orm.deprecation            : HHH90000025: PostgreSQLDialect does not need to be specified explicitly using 'hibernate.dialect' (remove the property setting and it will be selected by default)
-2026-05-10T12:51:53.563+02:00  INFO 165523 --- [chat-service] [           main] org.hibernate.orm.connections.pooling    : HHH10001005: Database info:
-	Database JDBC URL [jdbc:postgresql://localhost:5432/chatdb1]
-	Database driver: PostgreSQL JDBC Driver
-	Database dialect: PostgreSQLDialect
-	Database version: 17.9
-	Default catalog/schema: chatdb1/public
-	Autocommit mode: undefined/unknown
-	Isolation level: READ_COMMITTED [default READ_COMMITTED]
-	JDBC fetch size: none
-	Pool: DataSourceConnectionProvider
-	Minimum pool size: undefined/unknown
-	Maximum pool size: undefined/unknown
-2026-05-10T12:51:54.818+02:00  INFO 165523 --- [chat-service] [           main] org.hibernate.orm.core                   : HHH000489: No JTA platform available (set 'hibernate.transaction.jta.platform' to enable JTA platform integration)
-2026-05-10T12:51:54.890+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create table posts (
-        id UUID not null,
-        author_id UUID not null,
-        content varchar(5000) not null,
-        created_at timestamp(6) not null,
-        image_url varchar(2048),
-        is_deleted boolean not null,
-        updated_at timestamp(6) not null,
-        primary key (id)
-    )
-Hibernate: 
-    create table posts (
-        id UUID not null,
-        author_id UUID not null,
-        content varchar(5000) not null,
-        created_at timestamp(6) not null,
-        image_url varchar(2048),
-        is_deleted boolean not null,
-        updated_at timestamp(6) not null,
-        primary key (id)
-    )
-2026-05-10T12:51:54.900+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create index idx_posts_author 
-       on posts (author_id)
-Hibernate: 
-    create index idx_posts_author 
-       on posts (author_id)
-2026-05-10T12:51:54.907+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create index idx_posts_deleted 
-       on posts (is_deleted)
-Hibernate: 
-    create index idx_posts_deleted 
-       on posts (is_deleted)
-2026-05-10T12:51:54.913+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create index idx_posts_created 
-       on posts (created_at)
-Hibernate: 
-    create index idx_posts_created 
-       on posts (created_at)
-2026-05-10T12:51:54.919+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create index idx_posts_updated 
-       on posts (updated_at)
-Hibernate: 
-    create index idx_posts_updated 
-       on posts (updated_at)
-2026-05-10T12:51:54.925+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create index idx_posts_author_active 
-       on posts (author_id, is_deleted)
-Hibernate: 
-    create index idx_posts_author_active 
-       on posts (author_id, is_deleted)
-2026-05-10T12:51:54.931+02:00 DEBUG 165523 --- [chat-service] [           main] org.hibernate.SQL                        : 
-    create index idx_posts_active_created 
-       on posts (is_deleted, created_at)
-Hibernate: 
-    create index idx_posts_active_created 
-       on posts (is_deleted, created_at)
-2026-05-10T12:51:54.939+02:00  INFO 165523 --- [chat-service] [           main] j.LocalContainerEntityManagerFactoryBean : Initialized JPA EntityManagerFactory for persistence unit 'default'
-2026-05-10T12:51:55.120+02:00  WARN 165523 --- [chat-service] [           main] JpaBaseConfiguration$JpaWebConfiguration : spring.jpa.open-in-view is enabled by default. Therefore, database queries may be performed during view rendering. Explicitly configure spring.jpa.open-in-view to disable this warning
-2026-05-10T12:51:55.709+02:00  INFO 165523 --- [chat-service] [           main] c.e.c.ChatServiceApplicationTests        : Started ChatServiceApplicationTests in 5.887 seconds (process running for 7.58)
-Mockito is currently self-attaching to enable the inline-mock-maker. This will no longer work in future releases of the JDK. Please add Mockito as an agent to your build as described in Mockito's documentation: https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3
-OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
-WARNING: A Java agent has been loaded dynamically (/home/ishimwe/.m2/repository/net/bytebuddy/byte-buddy-agent/1.17.8/byte-buddy-agent-1.17.8.jar)
-WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
-WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
-WARNING: Dynamic loading of agents will be disallowed by default in a future release
-[INFO] Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 7.245 s -- in com.example.chat_service.ChatServiceApplicationTests
-[INFO] 
-[INFO] Results:
-[INFO] 
-[INFO] Tests run: 1, Failures: 0, Errors: 0, Skipped: 0
-[INFO] 
-[INFO] 
-[INFO] --- maven-jar-plugin:3.4.2:jar (default-jar) @ chat_service ---
-[INFO] Building jar: /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/target/chat_service-0.0.1-SNAPSHOT.jar
-[INFO] 
-[INFO] --- spring-boot-maven-plugin:4.0.6:repackage (repackage) @ chat_service ---
-[INFO] Replacing main artifact /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/target/chat_service-0.0.1-SNAPSHOT.jar with repackaged archive, adding nested dependencies in BOOT-INF/.
-[INFO] The original artifact has been renamed to /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/target/chat_service-0.0.1-SNAPSHOT.jar.original
-[INFO] 
-[INFO] --- maven-install-plugin:3.1.4:install (default-install) @ chat_service ---
-[INFO] Installing /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/pom.xml to /home/ishimwe/.m2/repository/com/example/chat_service/0.0.1-SNAPSHOT/chat_service-0.0.1-SNAPSHOT.pom
-[INFO] Installing /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/target/chat_service-0.0.1-SNAPSHOT.jar to /home/ishimwe/.m2/repository/com/example/chat_service/0.0.1-SNAPSHOT/chat_service-0.0.1-SNAPSHOT.jar
-[INFO] ------------------------------------------------------------------------
-[INFO] BUILD SUCCESS
-[INFO] ------------------------------------------------------------------------
-[INFO] Total time:  15.487 s
-[INFO] Finished at: 2026-05-10T12:51:57+02:00
-[INFO] ------------------------------------------------------------------------
-ishimwe@alpha:~/projs/django/microservices/service_one/zedvye_six/chat_service$ mvn spring-boot:run
-[INFO] Scanning for projects...
-[INFO] 
-[INFO] ----------------------< com.example:chat_service >----------------------
-[INFO] Building chat_service 0.0.1-SNAPSHOT
-[INFO] --------------------------------[ jar ]---------------------------------
-[INFO] 
-[INFO] >>> spring-boot-maven-plugin:4.0.6:run (default-cli) > test-compile @ chat_service >>>
-[INFO] 
-[INFO] --- maven-resources-plugin:3.3.1:resources (default-resources) @ chat_service ---
-[INFO] Copying 1 resource from src/main/resources to target/classes
-[INFO] Copying 0 resource from src/main/resources to target/classes
-[INFO] 
-[INFO] --- maven-compiler-plugin:3.14.1:compile (default-compile) @ chat_service ---
-[INFO] Recompiling the module because of changed source code.
-[INFO] Compiling 20 source files with javac [debug parameters release 21] to target/classes
-[INFO] 
-[INFO] --- maven-resources-plugin:3.3.1:testResources (default-testResources) @ chat_service ---
-[INFO] skip non existing resourceDirectory /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/src/test/resources
-[INFO] 
-[INFO] --- maven-compiler-plugin:3.14.1:testCompile (default-testCompile) @ chat_service ---
-[INFO] Recompiling the module because of changed dependency.
-[INFO] Compiling 1 source file with javac [debug parameters release 21] to target/test-classes
-[INFO] 
-[INFO] <<< spring-boot-maven-plugin:4.0.6:run (default-cli) < test-compile @ chat_service <<<
-[INFO] 
-[INFO] 
-[INFO] --- spring-boot-maven-plugin:4.0.6:run (default-cli) @ chat_service ---
-[INFO] Attaching agents: []
+logger = logging.getLogger(__name__)
 
-  .   ____          _            __ _ _
- /\\ / ___'_ __ _ _(_)_ __  __ _ \ \ \ \
-( ( )\___ | '_ | '_| | '_ \/ _` | \ \ \ \
- \\/  ___)| |_)| | | | | || (_| |  ) ) ) )
-  '  |____| .__|_| |_|_| |_\__, | / / / /
- =========|_|==============|___/=/_/_/_/
 
- :: Spring Boot ::                (v4.0.6)
+class JWTVerifier:
+    _public_key_cache = None
+    _last_fetch_time = 0
+    _cache_ttl = 300
+    _lock = Lock()
 
-2026-05-10T12:52:33.212+02:00  INFO 166254 --- [chat-service] [           main] c.e.chat_service.ChatServiceApplication  : Starting ChatServiceApplication using Java 21.0.10 with PID 166254 (/home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service/target/classes started by ishimwe in /home/ishimwe/projs/django/microservices/service_one/zedvye_six/chat_service)
-2026-05-10T12:52:33.215+02:00 DEBUG 166254 --- [chat-service] [           main] c.e.chat_service.ChatServiceApplication  : Running with Spring Boot v4.0.6, Spring v7.0.7
-2026-05-10T12:52:33.216+02:00  INFO 166254 --- [chat-service] [           main] c.e.chat_service.ChatServiceApplication  : No active profile set, falling back to 1 default profile: "default"
-2026-05-10T12:52:33.701+02:00  INFO 166254 --- [chat-service] [           main] .s.d.r.c.RepositoryConfigurationDelegate : Bootstrapping Spring Data JPA repositories in DEFAULT mode.
-2026-05-10T12:52:33.717+02:00  INFO 166254 --- [chat-service] [           main] .s.d.r.c.RepositoryConfigurationDelegate : Finished Spring Data repository scanning in 5 ms. Found 0 JPA repository interfaces.
-2026-05-10T12:52:34.416+02:00  INFO 166254 --- [chat-service] [           main] o.s.boot.tomcat.TomcatWebServer          : Tomcat initialized with port 8005 (http)
-2026-05-10T12:52:34.432+02:00  INFO 166254 --- [chat-service] [           main] o.apache.catalina.core.StandardService   : Starting service [Tomcat]
-2026-05-10T12:52:34.432+02:00  INFO 166254 --- [chat-service] [           main] o.apache.catalina.core.StandardEngine    : Starting Servlet engine: [Apache Tomcat/11.0.21]
-2026-05-10T12:52:34.481+02:00  INFO 166254 --- [chat-service] [           main] b.w.c.s.WebApplicationContextInitializer : Root WebApplicationContext: initialization completed in 1204 ms
-2026-05-10T12:52:34.687+02:00  INFO 166254 --- [chat-service] [           main] org.hibernate.orm.jpa                    : HHH008540: Processing PersistenceUnitInfo [name: default]
-2026-05-10T12:52:34.740+02:00  INFO 166254 --- [chat-service] [           main] org.hibernate.orm.core                   : HHH000001: Hibernate ORM core version 7.2.12.Final
-2026-05-10T12:52:35.222+02:00  INFO 166254 --- [chat-service] [           main] o.s.o.j.p.SpringPersistenceUnitInfo      : No LoadTimeWeaver setup: ignoring JPA class transformer
-2026-05-10T12:52:35.256+02:00  INFO 166254 --- [chat-service] [           main] com.zaxxer.hikari.HikariDataSource       : HikariPool-1 - Starting...
-2026-05-10T12:52:35.603+02:00  INFO 166254 --- [chat-service] [           main] com.zaxxer.hikari.pool.HikariPool        : HikariPool-1 - Added connection org.postgresql.jdbc.PgConnection@6339e604
-2026-05-10T12:52:35.604+02:00  INFO 166254 --- [chat-service] [           main] com.zaxxer.hikari.HikariDataSource       : HikariPool-1 - Start completed.
-2026-05-10T12:52:35.639+02:00  WARN 166254 --- [chat-service] [           main] org.hibernate.orm.deprecation            : HHH90000025: PostgreSQLDialect does not need to be specified explicitly using 'hibernate.dialect' (remove the property setting and it will be selected by default)
-2026-05-10T12:52:35.663+02:00  INFO 166254 --- [chat-service] [           main] org.hibernate.orm.connections.pooling    : HHH10001005: Database info:
-	Database JDBC URL [jdbc:postgresql://localhost:5432/chatdb1]
-	Database driver: PostgreSQL JDBC Driver
-	Database dialect: PostgreSQLDialect
-	Database version: 17.9
-	Default catalog/schema: chatdb1/public
-	Autocommit mode: undefined/unknown
-	Isolation level: READ_COMMITTED [default READ_COMMITTED]
-	JDBC fetch size: none
-	Pool: DataSourceConnectionProvider
-	Minimum pool size: undefined/unknown
-	Maximum pool size: undefined/unknown
-2026-05-10T12:52:36.527+02:00  INFO 166254 --- [chat-service] [           main] org.hibernate.orm.core                   : HHH000489: No JTA platform available (set 'hibernate.transaction.jta.platform' to enable JTA platform integration)
-2026-05-10T12:52:36.601+02:00  INFO 166254 --- [chat-service] [           main] j.LocalContainerEntityManagerFactoryBean : Initialized JPA EntityManagerFactory for persistence unit 'default'
-2026-05-10T12:52:36.703+02:00  WARN 166254 --- [chat-service] [           main] JpaBaseConfiguration$JpaWebConfiguration : spring.jpa.open-in-view is enabled by default. Therefore, database queries may be performed during view rendering. Explicitly configure spring.jpa.open-in-view to disable this warning
-2026-05-10T12:52:37.030+02:00  INFO 166254 --- [chat-service] [           main] o.s.boot.tomcat.TomcatWebServer          : Tomcat started on port 8005 (http) with context path '/'
-2026-05-10T12:52:37.037+02:00  INFO 166254 --- [chat-service] [           main] c.e.chat_service.ChatServiceApplication  : Started ChatServiceApplication in 4.379 seconds (process running for 4.845)
- i want to see if my tables are created 
+    @classmethod
+    async def _fetch_public_key(cls):
+        async with httpx.AsyncClient(timeout=5) as client:
+            response = await client.get(settings.AUTH_PUBLIC_KEY_URL)
+            response.raise_for_status()
+            key = response.text.strip()
+
+        if not key.startswith("-----BEGIN PUBLIC KEY-----"):
+            raise AuthenticationFailed("Invalid public key format")
+
+        return key
+
+    @classmethod
+    async def get_public_key(cls):
+        now = time.time()
+        async with cls._lock:
+            if cls._public_key_cache and (now - cls._last_fetch_time) < cls._cache_ttl:
+                return cls._public_key_cache
+
+            key = await cls._fetch_public_key()
+            cls._public_key_cache = key
+            cls._last_fetch_time = now
+            return key
+
+    @classmethod
+    async def verify_token_async(cls, token: str):
+        if token.count(".") < 2:
+            raise AuthenticationFailed("Invalid JWT format")
+
+        try:
+            public_key = await cls.get_public_key()
+            payload = jwt.decode(
+                token,
+                public_key,
+                algorithms=["RS256"],
+                options={
+                    "verify_exp": True,
+                    "verify_aud": False,
+                    "verify_iss": False,
+                    "require": ["user_id"],
+                },
+            )
+            return payload
+
+        except jwt.ExpiredSignatureError:
+            raise AuthenticationFailed("Token expired")
+        except jwt.InvalidTokenError:
+            raise AuthenticationFailed("Invalid token")
+)(from django.http import JsonResponse
+
+async def test_jwt_user_id(request):
+    return JsonResponse({
+        "user_id_from_jwt": request.user_id
+    })
+)(from django.urls import path
+from .views import test_jwt_user_id
+
+urlpatterns = [
+    path("test/", test_jwt_user_id, name="test-jwt-user-id"),
+])(# room_service/room_service/middleware/auth.py
+from django.http import JsonResponse
+from room_service.auth.jwt_verifier import JWTVerifier
+from rest_framework.exceptions import AuthenticationFailed
+from asgiref.sync import async_to_sync
+
+class JWTAuthenticationMiddleware:
+    def __init__(self, get_response):
+        self.get_response = get_response
+        self.verify = async_to_sync(JWTVerifier.verify_token_async)
+
+    def __call__(self, request):
+        auth_header = request.headers.get("Authorization")
+
+        if not auth_header:
+            request.user_id = None
+            return self.get_response(request)
+
+        if not auth_header.startswith("Bearer "):
+            return JsonResponse(
+                {"error": "Authorization header must be 'Bearer <token>'"},
+                status=401,
+            )
+
+        token = auth_header.split(" ", 1)[1].strip()
+        if not token:
+            return JsonResponse({"error": "Token is empty"}, status=401)
+
+        try:
+            payload = self.verify(token)
+            request.user_id = payload["user_id"]
+        except AuthenticationFailed as e:
+            return JsonResponse({"error": str(e)}, status=401)
+
+        return self.get_response(request)
+)(# src/application/external/services/http_client.py
+
+import requests
+from typing import Any, Dict, Optional
+from django.conf import settings
+
+class HTTPClient:
+    """
+    Reusable HTTP client for service-to-service communication.
+    Now uses internal API key instead of JWT.
+    """
+    def __init__(self, timeout: int = 10):  # increased timeout for prod
+        self.timeout = timeout
+        self.session = requests.Session()  # reuse connections
+
+    def get(self, url: str, headers: Optional[Dict[str, str]] = None) -> Dict[str, Any]:
+        headers = headers or {}
+        headers["X-Internal-Key"] = settings.INTERNAL_API_KEY
+        # Optional: add User-Agent for debugging
+        headers.setdefault("User-Agent", "wallet-service/1.0")
+
+        try:
+            response = self.session.get(url, headers=headers, timeout=self.timeout)
+            response.raise_for_status()
+            return response.json()
+        except requests.exceptions.RequestException as e:
+            # Better logging
+            raise RuntimeError(f"Failed to call {url}: {e}") from e)(# src/application/external/services/user_api_client.py
+
+from uuid import UUID
+from src.application.external.user_view import UserView
+from django.conf import settings
+from .http_client import HTTPClient
+import logging
+
+logger = logging.getLogger(__name__)
+
+
+class UserAPIClient:
+    """
+    Production-ready client for talking to the AUTH service.
+    Handles both:
+      { "user": { ... } }
+    and:
+      { "id": "...", ... }
+    """
+
+    def __init__(self, http_client: HTTPClient):
+        self.http = http_client
+        self.base_url = settings.AUTH_SERVICE_URL.rstrip("/")
+
+    def get_user_by_id(self, user_id: UUID) -> UserView:
+        url = f"{self.base_url}/users/users/{user_id}/"
+
+        try:
+            data = self.http.get(url)
+            user_data = data.get("user", data)
+
+            # ✅ Fix: Check for 'user_id', not 'id'
+            if "user_id" not in user_data or "username" not in user_data:
+                raise ValueError(f"Invalid user payload received: {user_data}")
+
+            return UserView(
+                user_id=UUID(user_data["user_id"]),
+                username=user_data["username"],
+                first_name=user_data.get("first_name", ""),
+                last_name=user_data.get("last_name", ""),
+            )
+
+        except Exception as e:
+            logger.error(f"[UserAPIClient] Failed to fetch user {user_id}: {e}", exc_info=True)
+            raise)(# src/application/external/user_view.py
+from __future__ import annotations
+
+from dataclasses import dataclass
+from typing import Any, Dict
+from uuid import UUID
+
+
+@dataclass(frozen=True)
+class UserView:
+    """
+    Lightweight read-only DTO for referencing a user (e.g., who liked something).
+    Contains only minimal user info needed for display.
+    Avoids tight coupling to the full User domain model or other UserDTOs.
+    """
+    user_id: UUID
+    username: str
+    first_name: str = ""
+    last_name: str = ""
+
+    def to_dict(self) -> Dict[str, Any]:
+        full_name = f"{self.first_name} {self.last_name}".strip() or None
+        return {
+            "user_id": str(self.user_id),
+            "username": self.username,
+            "first_name": self.first_name,
+            "last_name": self.last_name,
+            "full_name": full_name,
+        }
+
+    @classmethod
+    def from_dict(cls, data: Dict[str, Any]) -> "UserView":
+        user_id = data["user_id"]
+        if isinstance(user_id, str):
+            user_id = UUID(user_id)
+
+        return cls(
+            user_id=user_id,
+            username=data["username"],
+            first_name=data.get("first_name", ""),
+            last_name=data.get("last_name", ""),
+        )
+
+    @classmethod
+    def from_user_id(cls, user_id: UUID) -> "UserView":
+        """
+        Create a placeholder UserView when only the user_id is available.
+        In a real system, this would typically be hydrated via a user query service.
+        """
+        user_id_str = str(user_id)
+        return cls(
+            user_id=user_id,
+            username=f"user_{user_id_str[:8]}",
+            first_name=f"User{user_id_str[:4]}",
+            last_name=f"Test{user_id_str[4:8]}",
+        )) and .env file has (# =========================
+# Authentication & Security
+# =========================
+INTERNAL_API_KEY=super-secret-internal-key-change-in-prod
+SERVICE_JWT=my_jwt_secret_123!
+AUTH_SERVICE_URL=http://127.0.0.1:8000/zedvye_one/
+AUTH_PUBLIC_KEY_URL=http://127.0.0.1:8000/zedvye_one/users/public_key/
+WALLET_SERVICE=http://127.0.0.1:8001/wallet_service/wallets/by-user/)
+) next is my go service (
+
+    .env(FRONTEND_URL=http://localhost:3000,https://yourdomain.com,http://127.0.0.1:3000
+PORT=8080
+
+AUTH_PUBLIC_KEY_URL=http://127.0.0.1:8000/zedvye_one/users/public_key/
+AUTH_SERVICE_URL=http://127.0.0.1:8000/zedvye_one
+AUTH_PUBLIC_KEY_TTL=300
+INTERNAL_API_KEY=super-secret-internal-key-change-in-prod
+)
+
+)((// post_service/internal/http/router.go
+package router
+
+import (
+	"net/http"
+	"time"
+
+	auth "github.com/alphaxad9/my-go-backend/post_service/internal/authentication"
+	"github.com/alphaxad9/my-go-backend/post_service/internal/config"
+	"github.com/alphaxad9/my-go-backend/post_service/internal/contextkeys"
+	"github.com/alphaxad9/my-go-backend/post_service/internal/http/middleware"
+	postapi "github.com/alphaxad9/my-go-backend/post_service/src/posts/api/controllers"
+
+	"github.com/gin-gonic/gin"
+)
+
+type Router struct {
+	postCommandController *postapi.PostCommandController
+	postQueryController   *postapi.PostQueryController
+}
+
+func NewRouter(
+	postCommandController *postapi.PostCommandController,
+	postQueryController *postapi.PostQueryController,
+) *Router {
+	return &Router{
+		postCommandController: postCommandController,
+		postQueryController:   postQueryController,
+	}
+}
+
+func SetupRouter(cfg *config.Config, r *Router) *gin.Engine {
+	router := gin.Default()
+
+	// FIXED: Check error from SetTrustedProxies
+	if err := router.SetTrustedProxies(nil); err != nil {
+		// In a real application, you might want to panic or log fatally
+		// since this is a configuration issue during startup
+		panic("failed to set trusted proxies: " + err.Error())
+	}
+
+	router.Use(SetupCORS(cfg.FrontendURLs))
+	verifier := auth.NewVerifier(
+		cfg.AuthPublicKeyURL,
+		time.Duration(cfg.AuthPublicKeyTTL)*time.Second,
+	)
+
+	// === Health Check Endpoint (No Auth Required) ===
+	router.GET("/health/", func(c *gin.Context) {
+		c.JSON(http.StatusOK, gin.H{
+			"status":  "ok",
+			"service": "post_service",
+		})
+	})
+
+	api := router.Group("/api/v1")
+	// Keep existing auth test routes
+	api.GET("/auth/ping", func(c *gin.Context) {
+		c.JSON(200, gin.H{"status": "ok"})
+	})
+
+	api.GET(
+		"/auth/test",
+		middleware.AuthMiddleware(verifier),
+		func(c *gin.Context) {
+			userID := c.Request.Context().Value(contextkeys.UserIDKey)
+			c.JSON(http.StatusOK, gin.H{
+				"user_id_from_jwt": userID,
+			})
+		},
+	)
+
+	// Public post routes (read-only)
+	publicPosts := api.Group("/posts")
+	{
+		publicPosts.GET("/:id", r.postQueryController.GetPost)
+		publicPosts.GET("/search", r.postQueryController.SearchPosts)
+	}
+
+	// User-scoped public routes
+	api.GET("/users/:userId/posts", r.postQueryController.GetPostsByAuthor)
+
+	// Community-scoped public routes
+	api.GET("/communities/:communityId/posts", r.postQueryController.GetPostsByCommunity)
+
+	// Protected post mutation routes
+	protected := api.Group("")
+	protected.Use(middleware.AuthMiddleware(verifier))
+	{
+		protected.POST("/posts", r.postCommandController.CreatePost)
+		protected.PUT("/posts/:id", r.postCommandController.UpdatePost)
+		protected.PATCH("/posts/:id/visibility", r.postCommandController.TogglePostVisibility)
+		protected.POST("/posts/:id/like", r.postCommandController.LikePost)
+		protected.POST("/posts/:id/unlike", r.postCommandController.UnlikePost)
+		protected.POST("/posts/:id/comment", r.postCommandController.AddCommentToPost)
+		protected.DELETE("/posts/:id/comment", r.postCommandController.RemoveCommentFromPost)
+		protected.DELETE("/posts/:id", r.postCommandController.DeletePost)
+	}
+
+	return router
+}
+
+i could query api.GET(
+		"/auth/test",
+		middleware.AuthMiddleware(verifier),
+		func(c *gin.Context) {
+			userID := c.Request.Context().Value(contextkeys.UserIDKey)
+			c.JSON(http.StatusOK, gin.H{
+				"user_id_from_jwt": userID,
+			})
+		},
+	) and   path("test/", test_jwt_user_id, name="test-jwt-user-id"), to get the id of the user from token, (// github.com/alphaxad9/my-go-backend/post_service/external/user_view.go
+package external
+
+import "github.com/google/uuid"
+
+type UserView struct {
+	UserID    uuid.UUID `json:"user_id"`
+	Username  string    `json:"username"`
+	FirstName string    `json:"first_name,omitempty"`
+	LastName  string    `json:"last_name,omitempty"`
+}
+
+func (u UserView) FullName() *string {
+	full := u.FirstName + " " + u.LastName
+	if full == " " {
+		return nil
+	}
+	return &full
+}
+)(package services
+
+import (
+	"encoding/json"
+	"fmt"
+	"net/http"
+	"time"
+)
+
+type HTTPClient struct {
+	client *http.Client
+	apiKey string
+}
+
+func NewHTTPClient(apiKey string) *HTTPClient {
+	return &HTTPClient{
+		client: &http.Client{
+			Timeout: 10 * time.Second,
+		},
+		apiKey: apiKey,
+	}
+}
+
+func (h *HTTPClient) Get(url string, target interface{}) error {
+	req, err := http.NewRequest("GET", url, nil)
+	if err != nil {
+		return err
+	}
+
+	req.Header.Set("X-Internal-Key", h.apiKey)
+	req.Header.Set("User-Agent", "post-service/1.0")
+
+	resp, err := h.client.Do(req)
+	if err != nil {
+		return fmt.Errorf("failed to call %s: %w", url, err)
+	}
+	defer resp.Body.Close()
+
+	if resp.StatusCode >= 400 {
+		return fmt.Errorf("auth service returned status %d", resp.StatusCode)
+	}
+
+	return json.NewDecoder(resp.Body).Decode(target)
+}
+)(package authentication
+
+import (
+	"crypto/rsa"
+	"errors"
+	"io"
+	"net/http"
+	"sync"
+	"time"
+
+	jwt "github.com/golang-jwt/jwt/v5"
+)
+
+type Verifier struct {
+	publicKey *rsa.PublicKey
+	lastFetch time.Time
+	ttl       time.Duration
+	url       string
+	mu        sync.Mutex
+}
+
+func NewVerifier(url string, ttl time.Duration) *Verifier {
+	return &Verifier{
+		url: url,
+		ttl: ttl,
+	}
+}
+
+func (v *Verifier) fetchKey() (*rsa.PublicKey, error) {
+	resp, err := http.Get(v.url)
+	if err != nil {
+		return nil, err
+	}
+	defer resp.Body.Close()
+
+	data, err := io.ReadAll(resp.Body)
+	if err != nil {
+		return nil, err
+	}
+
+	return jwt.ParseRSAPublicKeyFromPEM(data)
+}
+
+func (v *Verifier) getKey() (*rsa.PublicKey, error) {
+	v.mu.Lock()
+	defer v.mu.Unlock()
+
+	if v.publicKey != nil && time.Since(v.lastFetch) < v.ttl {
+		return v.publicKey, nil
+	}
+
+	key, err := v.fetchKey()
+	if err != nil {
+		return nil, err
+	}
+
+	v.publicKey = key
+	v.lastFetch = time.Now()
+	return key, nil
+}
+
+func (v *Verifier) Verify(token string) (jwt.MapClaims, error) {
+	key, err := v.getKey()
+	if err != nil {
+		return nil, err
+	}
+
+	parsed, err := jwt.Parse(token, func(t *jwt.Token) (interface{}, error) {
+		if _, ok := t.Method.(*jwt.SigningMethodRSA); !ok {
+			return nil, errors.New("unexpected signing method")
+		}
+		return key, nil
+	})
+
+	if err != nil || !parsed.Valid {
+		return nil, errors.New("invalid token")
+	}
+
+	claims, ok := parsed.Claims.(jwt.MapClaims)
+	if !ok {
+		return nil, errors.New("invalid claims")
+	}
+
+	if _, ok := claims["user_id"]; !ok {
+		return nil, errors.New("user_id missing")
+	}
+
+	return claims, nil
+}
+)(package middleware
+
+import (
+	"context"
+	"net/http"
+	"strings"
+
+	auth "github.com/alphaxad9/my-go-backend/post_service/internal/authentication"
+	"github.com/alphaxad9/my-go-backend/post_service/internal/contextkeys"
+
+	"github.com/gin-gonic/gin"
+)
+
+func AuthMiddleware(verifier *auth.Verifier) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		h := c.GetHeader("Authorization")
+		if h == "" {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "missing Authorization header"})
+			return
+		}
+
+		if !strings.HasPrefix(h, "Bearer ") {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "invalid Authorization header"})
+			return
+		}
+
+		token := strings.TrimPrefix(h, "Bearer ")
+		claims, err := verifier.Verify(token)
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+			return
+		}
+
+		ctx := context.WithValue(
+			c.Request.Context(),
+			contextkeys.UserIDKey,
+			claims["user_id"],
+		)
+
+		c.Request = c.Request.WithContext(ctx)
+		c.Next()
+	}
+}
+)(package router
+
+import (
+	"time"
+
+	"github.com/gin-contrib/cors"
+	"github.com/gin-gonic/gin"
+)
+
+func SetupCORS(frontendURLs []string) gin.HandlerFunc {
+	return cors.New(cors.Config{
+		AllowOrigins:     frontendURLs,
+		AllowMethods:     []string{"GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+		MaxAge:           12 * time.Hour,
+	})
+}
+)(// github.com/alphaxad9/my-go-backend/post_service/src/posts/application/posts/handlers/query_handlers.go
+package handlers
+
+import (
+	"context"
+	"github.com/alphaxad9/my-go-backend/post_service/external"
+	services "github.com/alphaxad9/my-go-backend/post_service/external/services" // ← now imports the package with interface
+	postappservices "github.com/alphaxad9/my-go-backend/post_service/src/posts/application/posts/services"
+
+	"github.com/google/uuid"
+)
+
+// PostQueryHandler uses interfaces for testability
+type PostQueryHandler struct {
+	postQueries postappservices.PostQueryService
+	userClient  services.UserQueryService // ← INTERFACE, not *UserAPIClient
+}
+
+func NewPostQueryHandler(
+	postQueries postappservices.PostQueryService,
+	userClient services.UserQueryService, // ← INTERFACE
+) *PostQueryHandler {
+	return &PostQueryHandler{
+		postQueries: postQueries,
+		userClient:  userClient,
+	}
+}
+
+// GetPostWithAuthor retrieves a single post by ID and enriches it with author details.
+func (h *PostQueryHandler) GetPostWithAuthor(ctx context.Context, postID uuid.UUID) (*PostResponseDTO, error) {
+	postView, err := h.postQueries.GetPostByID(ctx, postID)
+	if err != nil {
+		return nil, err
+	}
+
+	var authorView external.UserView
+	author, err := h.userClient.GetUserByID(postView.AuthorID)
+	if err != nil {
+		authorView = external.UserView{UserID: postView.AuthorID}
+	} else {
+		authorView = *author
+	}
+
+	dto := ToPostResponseDTO(postView, authorView)
+	return &dto, nil
+}
+
+// GetPostsByAuthorWithAuthors retrieves posts by an author and enriches each with author data.
+func (h *PostQueryHandler) GetPostsByAuthorWithAuthors(
+	ctx context.Context,
+	authorID uuid.UUID,
+	limit, offset int,
+) (*PostListResponseDTO, error) {
+	posts, err := h.postQueries.GetPostsByAuthor(ctx, authorID, limit, offset)
+	if err != nil {
+		return nil, err
+	}
+
+	totalCount, err := h.postQueries.GetPostCountByAuthor(ctx, authorID)
+	if err != nil {
+		return nil, err
+	}
+
+	var authorView external.UserView
+	author, err := h.userClient.GetUserByID(authorID)
+	if err != nil {
+		authorView = external.UserView{UserID: authorID}
+	} else {
+		authorView = *author
+	}
+
+	authorsMap := make(map[uuid.UUID]external.UserView, len(posts))
+	for _, p := range posts {
+		authorsMap[p.AuthorID] = authorView
+	}
+
+	page := offset/limit + 1
+	if offset%limit != 0 {
+		page++
+	}
+
+	dto := ToPostListResponseDTO(posts, authorsMap, page, limit, totalCount)
+	return &dto, nil
+}
+
+// GetPostsByCommunityWithAuthors retrieves posts in a community and enriches each with its author.
+func (h *PostQueryHandler) GetPostsByCommunityWithAuthors(
+	ctx context.Context,
+	communityID uuid.UUID,
+	requesterID *uuid.UUID,
+	limit, offset int,
+) (*PostListResponseDTO, error) {
+	posts, err := h.postQueries.GetPostsByCommunity(ctx, communityID, requesterID, limit, offset)
+	if err != nil {
+		return nil, err
+	}
+
+	authorIDs := make(map[uuid.UUID]struct{})
+	for _, p := range posts {
+		authorIDs[p.AuthorID] = struct{}{}
+	}
+
+	authorsMap := make(map[uuid.UUID]external.UserView)
+	for id := range authorIDs {
+		author, err := h.userClient.GetUserByID(id)
+		if err != nil {
+			authorsMap[id] = external.UserView{UserID: id}
+		} else {
+			authorsMap[id] = *author
+		}
+	}
+
+	// ⚠️ Temporary total count approximation
+	totalCount := offset + len(posts)
+
+	page := offset/limit + 1
+	if offset%limit != 0 {
+		page++
+	}
+
+	dto := ToPostListResponseDTO(posts, authorsMap, page, limit, totalCount)
+	return &dto, nil
+}
+
+// SearchPostsEnriched performs a search and enriches results with author data.
+func (h *PostQueryHandler) SearchPostsEnriched(
+	ctx context.Context,
+	query string,
+	limit, offset int,
+) (*PostListResponseDTO, error) {
+	if query == "" {
+		return &PostListResponseDTO{
+			Posts:      []PostResponseDTO{},
+			TotalCount: 0,
+			Page:       1,
+			PageSize:   limit,
+			HasMore:    false,
+		}, nil
+	}
+
+	posts, err := h.postQueries.SearchPosts(ctx, query, limit, offset)
+	if err != nil {
+		return nil, err
+	}
+
+	authorIDs := make(map[uuid.UUID]struct{})
+	for _, p := range posts {
+		authorIDs[p.AuthorID] = struct{}{}
+	}
+
+	authorsMap := make(map[uuid.UUID]external.UserView)
+	for id := range authorIDs {
+		author, err := h.userClient.GetUserByID(id)
+		if err != nil {
+			authorsMap[id] = external.UserView{UserID: id}
+		} else {
+			authorsMap[id] = *author
+		}
+	}
+
+	totalCount := offset + len(posts)
+	page := offset/limit + 1
+	if offset%limit != 0 {
+		page++
+	}
+
+	dto := ToPostListResponseDTO(posts, authorsMap, page, limit, totalCount)
+	return &dto, nil
+}
+)(
+  // github.com/alphaxad9/my-go-backend/post_service/external/services/user_api_client.go
+package services
+
+import (
+	"fmt"
+
+	"github.com/alphaxad9/my-go-backend/post_service/external"
+
+	"github.com/google/uuid"
+)
+
+type UserAPIClient struct {
+	httpClient *HTTPClient
+	baseURL    string
+}
+
+func NewUserAPIClient(httpClient *HTTPClient, baseURL string) *UserAPIClient {
+	return &UserAPIClient{
+		httpClient: httpClient,
+		baseURL:    baseURL,
+	}
+}
+
+func (c *UserAPIClient) GetUserByID(userID uuid.UUID) (*external.UserView, error) {
+	url := fmt.Sprintf("%s/users/users/%s/", c.baseURL, userID.String())
+
+	var response map[string]interface{}
+
+	err := c.httpClient.Get(url, &response)
+	if err != nil {
+		return nil, err
+	}
+
+	// handle both:
+	// { "user": { ... } }
+	// or direct object
+
+	var userData map[string]interface{}
+
+	if u, ok := response["user"].(map[string]interface{}); ok {
+		userData = u
+	} else {
+		userData = response
+	}
+
+	userIDStr, okID := userData["user_id"].(string)
+	username, okUsername := userData["username"].(string)
+
+	if !okID || !okUsername {
+		return nil, fmt.Errorf("invalid user payload: %+v", userData)
+	}
+
+	parsedID, err := uuid.Parse(userIDStr)
+	if err != nil {
+		return nil, err
+	}
+
+	firstName, _ := userData["first_name"].(string)
+	lastName, _ := userData["last_name"].(string)
+
+	return &external.UserView{
+		UserID:    parsedID,
+		Username:  username,
+		FirstName: firstName,
+		LastName:  lastName,
+	}, nil
+}
+
+)
+(package services
+
+import (
+	"github.com/alphaxad9/my-go-backend/post_service/external"
+
+	"github.com/google/uuid"
+)
+
+// UserQueryService defines the contract for fetching user data.
+type UserQueryService interface {
+	GetUserByID(userID uuid.UUID) (*external.UserView, error)
+}
+)
+)) now how can i adopt this format, in few details i want to submit request with a cookie that we send it it auth_service and it help us get the id of the requested user thats it, nothing else, now give me full step by step guide) solution (Your architecture is already good and consistent across Python and Go.
+For your Java Spring Boot service, you want the **same exact pattern**:
+
+* frontend sends cookie/JWT
+* Java service extracts token
+* Java service verifies JWT using auth_service public key
+* Java service stores `user_id`
+* controllers/services can access authenticated user id
+* internal service-to-service requests use `X-Internal-Key`
+
+That’s it.
+
+You do NOT need Spring Security OAuth2 monster configs for this.
+
+---
+
+# STEP 1 — Add dependencies
+
+In `pom.xml` add JWT + HTTP client dependencies.
+
+```xml
+<!-- JWT -->
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.12.5</version>
+</dependency>
+
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-impl</artifactId>
+    <version>0.12.5</version>
+    <scope>runtime</scope>
+</dependency>
+
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId>
+    <version>0.12.5</version>
+    <scope>runtime</scope>
+</dependency>
+```
+
+---
+
+# STEP 2 — Add env variables
+
+In your `.env`
+
+```env
+AUTH_PUBLIC_KEY_URL=http://127.0.0.1:8000/zedvye_one/users/public_key/
+AUTH_SERVICE_URL=http://127.0.0.1:8000/zedvye_one
+INTERNAL_API_KEY=super-secret-internal-key-change-in-prod
+AUTH_PUBLIC_KEY_TTL=300
+```
+
+---
+
+# STEP 3 — Add config reader
+
+Create:
+
+```java
+// config/AuthConfig.java
+package com.example.chat_service.config;
+
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class AuthConfig {
+
+    @Value("${AUTH_PUBLIC_KEY_URL}")
+    private String authPublicKeyUrl;
+
+    @Value("${AUTH_PUBLIC_KEY_TTL}")
+    private long authPublicKeyTTL;
+
+    @Value("${INTERNAL_API_KEY}")
+    private String internalApiKey;
+
+    @Value("${AUTH_SERVICE_URL}")
+    private String authServiceUrl;
+
+    public String getAuthPublicKeyUrl() {
+        return authPublicKeyUrl;
+    }
+
+    public long getAuthPublicKeyTTL() {
+        return authPublicKeyTTL;
+    }
+
+    public String getInternalApiKey() {
+        return internalApiKey;
+    }
+
+    public String getAuthServiceUrl() {
+        return authServiceUrl;
+    }
+}
+```
+
+---
+
+# STEP 4 — Create JWT verifier
+
+Create:
+
+```java
+// infrastructure/security/JWTVerifier.java
+package com.example.chat_service.infrastructure.security;
+
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jwts;
+
+import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestTemplate;
+
+import java.security.PublicKey;
+import java.security.KeyFactory;
+import java.security.spec.X509EncodedKeySpec;
+
+import java.util.Base64;
+
+@Component
+public class JWTVerifier {
+
+    private final RestTemplate restTemplate = new RestTemplate();
+
+    private PublicKey cachedKey;
+
+    public PublicKey fetchPublicKey(String url) throws Exception {
+
+        if (cachedKey != null) {
+            return cachedKey;
+        }
+
+        String pem = restTemplate.getForObject(url, String.class);
+
+        pem = pem
+                .replace("-----BEGIN PUBLIC KEY-----", "")
+                .replace("-----END PUBLIC KEY-----", "")
+                .replaceAll("\\s+", "");
+
+        byte[] decoded = Base64.getDecoder().decode(pem);
+
+        X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
+
+        KeyFactory factory = KeyFactory.getInstance("RSA");
+
+        cachedKey = factory.generatePublic(spec);
+
+        return cachedKey;
+    }
+
+    public Claims verify(String token, String publicKeyUrl) throws Exception {
+
+        PublicKey key = fetchPublicKey(publicKeyUrl);
+
+        return Jwts.parser()
+                .verifyWith(key)
+                .build()
+                .parseSignedClaims(token)
+                .getPayload();
+    }
+}
+```
+
+---
+
+# STEP 5 — Create request context holder
+
+This replaces Go context.
+
+```java
+// infrastructure/security/UserContext.java
+package com.example.chat_service.infrastructure.security;
+
+public class UserContext {
+
+    private static final ThreadLocal<String> currentUser = new ThreadLocal<>();
+
+    public static void setUserId(String userId) {
+        currentUser.set(userId);
+    }
+
+    public static String getUserId() {
+        return currentUser.get();
+    }
+
+    public static void clear() {
+        currentUser.remove();
+    }
+}
+```
+
+---
+
+# STEP 6 — Create JWT middleware filter
+
+This is equivalent to:
+
+* Django middleware
+* Gin middleware
+
+Create:
+
+```java
+// infrastructure/security/JWTAuthenticationFilter.java
+package com.example.chat_service.infrastructure.security;
+
+import com.example.chat_service.config.AuthConfig;
+
+import io.jsonwebtoken.Claims;
+
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+
+import org.springframework.stereotype.Component;
+import org.springframework.web.filter.OncePerRequestFilter;
+
+import java.io.IOException;
+
+@Component
+public class JWTAuthenticationFilter extends OncePerRequestFilter {
+
+    private final JWTVerifier verifier;
+    private final AuthConfig config;
+
+    public JWTAuthenticationFilter(
+            JWTVerifier verifier,
+            AuthConfig config
+    ) {
+        this.verifier = verifier;
+        this.config = config;
+    }
+
+    @Override
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
+    ) throws ServletException, IOException {
+
+        try {
+
+            String token = extractToken(request);
+
+            if (token != null) {
+
+                Claims claims = verifier.verify(
+                        token,
+                        config.getAuthPublicKeyUrl()
+                );
+
+                String userId = claims.get("user_id", String.class);
+
+                UserContext.setUserId(userId);
+            }
+
+            filterChain.doFilter(request, response);
+
+        } catch (Exception e) {
+
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+
+            response.setContentType("application/json");
+
+            response.getWriter().write("""
+                {"error":"invalid token"}
+            """);
+
+        } finally {
+            UserContext.clear();
+        }
+    }
+
+    private String extractToken(HttpServletRequest request) {
+
+        // Authorization header
+        String auth = request.getHeader("Authorization");
+
+        if (auth != null && auth.startsWith("Bearer ")) {
+            return auth.substring(7);
+        }
+
+        // Cookie fallback
+        if (request.getCookies() != null) {
+
+            for (Cookie cookie : request.getCookies()) {
+
+                if (cookie.getName().equals("access_token")) {
+                    return cookie.getValue();
+                }
+            }
+        }
+
+        return null;
+    }
+}
+```
+
+---
+
+# STEP 7 — Register filter
+
+Create:
+
+```java
+// config/SecurityConfig.java
+package com.example.chat_service.config;
+
+import com.example.chat_service.infrastructure.security.JWTAuthenticationFilter;
+
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
+
+@Configuration
+public class SecurityConfig {
+
+    @Bean
+    public FilterRegistrationBean<JWTAuthenticationFilter> jwtFilter(
+            JWTAuthenticationFilter filter
+    ) {
+
+        FilterRegistrationBean<JWTAuthenticationFilter> registration =
+                new FilterRegistrationBean<>();
+
+        registration.setFilter(filter);
+
+        registration.addUrlPatterns("/*");
+
+        registration.setOrder(1);
+
+        return registration;
+    }
+}
+```
+
+---
+
+# STEP 8 — Test endpoint
+
+Create:
+
+```java
+// api/auth/AuthTestController.java
+package com.example.chat_service.api.auth;
+
+import com.example.chat_service.infrastructure.security.UserContext;
+
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.Map;
+
+@RestController
+public class AuthTestController {
+
+    @GetMapping("/api/v1/auth/test")
+    public Map<String, Object> test() {
+
+        return Map.of(
+                "user_id_from_jwt",
+                UserContext.getUserId()
+        );
+    }
+}
+```
+
+---
+
+# STEP 9 — Test it
+
+Send:
+
+```bash
+curl http://localhost:8080/api/v1/auth/test \
+  -H "Authorization: Bearer YOUR_TOKEN"
+```
+
+OR cookie:
+
+```bash
+curl http://localhost:8080/api/v1/auth/test \
+  --cookie "access_token=YOUR_TOKEN"
+```
+
+Expected:
+
+```json
+{
+  "user_id_from_jwt": "uuid-here"
+}
+```
+
+---
+
+# STEP 10 — Use authenticated user everywhere
+
+Anywhere in app:
+
+```java
+String userId = UserContext.getUserId();
+```
+
+Example:
+
+```java
+UUID authorId = UUID.fromString(UserContext.getUserId());
+```
+
+Exactly like:
+
+* Django `request.user_id`
+* Go `contextkeys.UserIDKey`
+
+---
+
+# STEP 11 — Internal auth service calls
+
+Now copy your Go/Python pattern.
+
+Create:
+
+```java
+// external/http/HTTPClient.java
+package com.example.chat_service.external.http;
+
+import com.example.chat_service.config.AuthConfig;
+
+import org.springframework.http.*;
+import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestTemplate;
+
+@Component
+public class HTTPClient {
+
+    private final RestTemplate restTemplate = new RestTemplate();
+
+    private final AuthConfig config;
+
+    public HTTPClient(AuthConfig config) {
+        this.config = config;
+    }
+
+    public String get(String url) {
+
+        HttpHeaders headers = new HttpHeaders();
+
+        headers.set("X-Internal-Key", config.getInternalApiKey());
+
+        headers.set("User-Agent", "chat-service/1.0");
+
+        HttpEntity<Void> entity = new HttpEntity<>(headers);
+
+        ResponseEntity<String> response = restTemplate.exchange(
+                url,
+                HttpMethod.GET,
+                entity,
+                String.class
+        );
+
+        return response.getBody();
+    }
+}
+```
+
+---
+
+# IMPORTANT THING
+
+You are building:
+
+* lightweight microservice auth
+* centralized auth_service
+* shared JWT validation
+* public key verification
+
+This is GOOD architecture.
+
+Do NOT suddenly switch into gigantic Spring Security OAuth2/JWT resource server tutorials unless you specifically need:
+
+* RBAC
+* scopes
+* refresh token flows
+* oauth providers
+* enterprise SSO
+
+For your setup, your Go/Python architecture is already clean and scalable.
+) we are going to apply these step by step as mentioned in this solution 
